--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,32 @@
 version: "3"
 services:
-
-  nginx:
-    build:
-      context: devops/nginx/
-    container_name: nginx
-    ports:
-      - "8003:80"
-    volumes:
-      - .:/app
-      - ./devops/nginx/default-dev.conf:/etc/nginx/conf.d/default.conf
-
-  php:
-    build:
-      context: devops/php/
-      dockerfile: Dockerfile
-    container_name: php
-    ports:
-      - "9300:9000"
-    volumes:
-      - .:/app
-      - ./devops/php/assets/php-development.ini:/usr/local/etc/php/conf.d/additional.ini
-    environment:
-     - DOCKER_NAME=docker_php
-
+    nginx:
+        build:
+            context: devops/nginx/
+        container_name: nginx
+        ports:
+            - "8003:80"
+        volumes:
+            - .:/app
+            - ./devops/nginx/default-dev.conf:/etc/nginx/conf.d/default.conf
+    php:
+        build:
+            context: devops/php/
+            dockerfile: Dockerfile
+        container_name: php
+        ports:
+            - "9300:9000"
+        volumes:
+            - .:/app
+            - ./devops/php/assets/php-development.ini:/usr/local/etc/php/conf.d/additional.ini
+        environment:
+            - DOCKER_NAME=docker_php
+    db:
+        image: mysql:5.7
+        ports:
+            - "3306:3306"
+        environment:
+            - MYSQL_ROOT_PASSWORD=root
+            - MYSQL_DATABASE=faq
+            - MYSQL_USER=root
+            - MYSQL_PASSWORD=root
