--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
         environment:
             - DOCKER_NAME=docker_php
     db:
+        container_name: mysql
         image: mysql:5.7
         ports:
             - "3306:3306"
